[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MatchEnd.gd" type="Script" id=2]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Scenes/OverlayShader.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/CantedFX Bold.otf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 3840, 2160 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 5 )

[node name="MatchEnd" type="Panel"]
margin_left = -1.6176
margin_top = -1.39184
margin_right = 1918.38
margin_bottom = 1078.61
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -149.999
margin_top = 527.489
margin_right = 220.002
margin_bottom = -432.513
rect_pivot_offset = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
text = "Jogar novamente"

[node name="ArenaSelectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.999
margin_top = 127.178
margin_right = 220.001
margin_bottom = 247.178
rect_pivot_offset = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
text = "Seleção de arena"

[node name="MenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.999
margin_top = 264.317
margin_right = 220.001
margin_bottom = 384.317
rect_pivot_offset = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
text = "Menu inicial"

[node name="OverlayShader" parent="." instance=ExtResource( 4 )]
margin_left = -4.08215
margin_top = -3.60816
margin_right = 1221.92
margin_bottom = 688.391
rect_scale = Vector2( 1.56887, 1.56879 )

[node name="WinnerLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.953
margin_top = -266.017
margin_right = 573.737
margin_bottom = -118.017
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "left side won!"
align = 1
valign = 1

